# prime-finder-rust

./: Cargo.toml  README.md  primes.txt
src/: main.rs
